--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "npm": "9.3.1"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.6.0",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
