--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@radix-ui/react-accordion": "^1.1.0",
+    "@radix-ui/react-icons": "^1.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
