--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-accordion": "^1.1.0",
     "@radix-ui/react-icons": "^1.1.1",
+    "@radix-ui/react-select": "^1.2.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
