--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint-config-next": "13.1.6",
+    "moviedb-promise": "^3.3.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
